--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root{
-    --primary-color:#adf0d4;
-    --secondary-color:#1fd8af;
-    --bg-color:#0d1512;
+    --primary-color:#FF6392;
+    --secondary-color:teal;
+    --bg-color: rgb(246, 240, 240);
 }
 *{
     margin:0;
@@ -31,6 +31,9 @@ header,main,footer{
     margin:0 auto;
     width:100%
 }
+p{
+    font-size: 1.05rem;
+}
 header{
     display:flex;
     align-items: center;
@@ -41,7 +44,7 @@ nav{
     color:var(--secondary-color);
     display:flex;
     align-items:center;
-    flex-direction: column;
+    flex-direction: row;
     gap:32px;
 }
 nav a{
@@ -67,7 +70,8 @@ section{
     gap:8px;
 }
 .imgContainer{
-    max-width:72px;
+
+    max-width:114px;
     border-radius: 100%;
     overflow:hidden;
 }
@@ -76,6 +80,105 @@ section{
     aspect-ratio: 1/1;
     object-fit:cover;
 }
+.statsContainer{
+    flex-direction: column;
+    display: flex;
+    align-items: stretch;
+    gap:24px;
+
+}
+.stats{
+    display: flex;
+    flex-direction: column;
+    gap:14px;
+
+}
+.stats>div{
+    flex:1;
+    display:flex;
+    align-items:center;
+    gap:14px;
+
+}
+.stats div i{
+    font-size: 1.4rem;
+
+}
+.stats div div{
+    display:grid;
+    place-items: center;
+    min-width:40px;
+
+}
+.aboutMe{
+    line-height:1.5em;
+
+}
+.outreach{
+    display:flex;
+    align-items: center;
+    gap:14px;
+    cursor: pointer;
+    width:fit-content;
+    margin-right: auto;
+}
+.outreach:hover{
+    opacity:0.7
+}
+.outreach i{
+    transform:rotate(-45deg)
+}
+.projectContainer{
+    display: flex;
+    flex-direction:column;
+    gap:24px;
+}
+.projectItem{
+    display:flex;
+    align-items:stretch;
+    gap: 24px;
+
+}
+.projectItem div:last-child{
+    aspect-ratio: 16/9;
+    max-width:30%;
+    overflow:hidden;
+    border-radius: 8px;
+
+}
+.projectItem div:last-child img{
+    width: 100%;
+    height:100%;
+    object-fit: cover;
+
+}
+
+
+.projectItem div:first-child{
+   display:flex;
+   flex-direction: column;
+   gap:14px;
+
+}
+.headerText{
+    margin-bottom: 24px;
+}
+@media (min-width:640px)
+{
+    .statsContainer{
+        flex-direction: row;
+    }
+    .stats{
+        gap:0px;
+
+    }
+    .aboutMe{
+        width:80%;
+        margin-right:auto;
+
+    }
+}
+
 
 
 
