--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root{
-    --primary-color:#FF6392;
-    --secondary-color:teal;
-    --bg-color: rgb(246, 240, 240);
+    --primary-color:#d9d9da;
+    --secondary-color:rgb(120, 113, 172);
+    --bg-color: rgb(10, 6, 30);
 }
 *{
     margin:0;
@@ -17,7 +17,7 @@ body {
     display: flex;
     flex-direction: column;
     gap:72px;
-    padding: 72px;
+    padding: 52px;
 
 
 
@@ -62,6 +62,7 @@ main,section,.nameContainer{
 }
 main{
     gap:64px;
+    padding-bottom: 64px;
 }
 section{
     gap:32px;
@@ -92,7 +93,13 @@ section{
     flex-direction: column;
     gap:14px;
 
+
 }
+.stats div p:hover{
+    text-shadow: 0 0 3px rgb(115, 113, 207);
+
+}
+
 .stats>div{
     flex:1;
     display:flex;
@@ -131,7 +138,7 @@ section{
 .projectContainer{
     display: flex;
     flex-direction:column;
-    gap:24px;
+    gap:48px;
 }
 .projectItem{
     display:flex;
@@ -139,14 +146,14 @@ section{
     gap: 24px;
 
 }
-.projectItem div:last-child{
+.projectItem> div:last-child{
     aspect-ratio: 16/9;
     max-width:30%;
     overflow:hidden;
     border-radius: 8px;
 
 }
-.projectItem div:last-child img{
+.projectItem> div:last-child img{
     width: 100%;
     height:100%;
     object-fit: cover;
@@ -158,10 +165,32 @@ section{
    display:flex;
    flex-direction: column;
    gap:14px;
+   flex:1;
 
 }
 .headerText{
     margin-bottom: 24px;
+}
+.linkContainer{
+    display:flex;
+    align-items: center;
+    gap:24px;
+
+}
+.linkItem{
+    display: flex;
+    flex-direction: row ;
+    align-items: center;
+    gap:14px !important;
+    color:var(--primary-color);
+    cursor: pointer;
+    text-decoration: none;
+}
+.linkItem p{
+    font-size: 0.9em;
+}
+.linkItem:hover {
+    opacity:0.7;
 }
 @media (min-width:640px)
 {
@@ -175,6 +204,10 @@ section{
     .aboutMe{
         width:80%;
         margin-right:auto;
+
+    }
+    .linkItem{
+        flex-direction: column !important;
 
     }
 }
